# multi-agent-orchestrator

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/: adapters-mixed.yaml  adapters-real.yaml  adapters-stub.yaml  default.yaml  github-default.yaml  workflow.yaml
docs/: adapters.md  agent-roles.md  architecture.md  github-workflow.md  morch.md  tech-spec-ko.md  tech-spec.md  usage-en.md  usage-ko.md  usage.md  workflow.md
examples/sample-task/: 01-cursor-implementation.md  04-codex-review-cycle-1.md
reference/: README.md
reference/docs/: architecture.md  bootstrap-scope.md  onboarding.md  platform-services.md
reference/docs/ai/: claude-role.md  codex-role.md  cursor-role.md  workflow.md
reference/reviews/: README.md
reference/reviews/templates/: 00-scope.md  02-claude-review.md
reference/scripts/: register-cluster.sh
src/orchestrator/: __init__.py  cli.py  user_hints.py
templates/artifacts/: 01-cursor-implementation.md  03-cursor-response.md  04-codex-review.md  05-final-approval.md
templates/prompts/: github-issue-task.md  smoke-test.md
tests/: test_adapter_factory.py  test_agents_config.py  test_artifact_service.py  test_auth_checker.py  test_command_adapter.py  test_github_improvements.py  test_github_run_orchestrator.py  test_github_service.py  test_github_workflow.py  test_issue_prompt_commands.py  test_logger.py  test_morch_cli.py  test_prompt_runner.py  test_provenance_and_loop.py  test_resource_errors.py  test_run_logger.py  test_run_orchestrator.py  test_setup_service.py  test_state_machine.py  test_target_repo_resolution.py  test_task_service.py  test_user_hints.py  test_workflow_engine.py
(+33 files in other folders)
